--- a/linkedin-clone/src/components/Header.css
+++ b/linkedin-clone/src/components/Header.css
@@ -2,6 +2,7 @@
     position: sticky;
     top: 0;
     display: flex;
+    background-color: white;
     justify-content: space-between;
     border-bottom: 0.1px solid lightgray;
     padding-top: 10px;
